--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/EvgenyLeukhin/react-book#readme",
   "dependencies": {
+    "github-markdown-css": "^2.10.0",
     "normalize.css": "^8.0.0",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
@@ -58,6 +59,7 @@
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^4.3.1",
+    "markdown-with-front-matter-loader": "^0.1.0",
     "mini-css-extract-plugin": "^0.4.1",
     "node-sass": "^4.9.1",
     "optimize-css-assets-webpack-plugin": "^4.0.3",
