--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "install-packages-npm": "npm install",
     "install-packages-yarn": "yarn install",
     "delete-packages": "rimraf node_modules",
-    "deploy": "gh-pages -d dist"
+    "deploy": "npm run build && gh-pages -d dist"
   },
   "repository": {
     "type": "git",
