--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "type": "git",
     "url": "git+https://github.com/EvgenyLeukhin/react-book.git"
   },
-  "keywords": ["react"],
+  "keywords": [
+    "react"
+  ],
   "author": "",
   "license": "MIT",
   "bugs": {
@@ -54,6 +56,7 @@
     "css-loader": "^1.0.0",
     "cssnano": "^4.0.0",
     "eslint": "^5.0.1",
+    "eslint-loader": "^2.1.2",
     "eslint-plugin-react": "^7.10.0",
     "express": "^4.16.3",
     "favicons-webpack-plugin": "0.0.9",
