--- a/.babelrc
+++ b/.babelrc
@@ -1,15 +1,18 @@
 {
   "presets": [
-    ["env", {
-      "targets": { "browsers": [ "last 2 versions", "> 0.5%", "not ie <= 10" ] },
-      "debug": true
-    }],
-    "react"
+    [
+      "@babel/preset-env", {
+        "targets": { "browsers": [ "last 2 versions", "> 0.5%", "not ie <= 10" ] },
+        "debug": true
+      }
+    ],
+    "@babel/preset-react"
   ],
+
   "plugins": [
-    "transform-class-properties",
-    "transform-object-rest-spread",
-    "syntax-dynamic-import"
+    "@babel/plugin-syntax-dynamic-import",
+    "@babel/plugin-proposal-class-properties"
   ],
+
   "ignore": [ "/node_modules/" ]
 }
