--- a/package.json
+++ b/package.json
@@ -1,84 +1,67 @@
 {
-  "name": "react-book",
+  "name": "js-book",
   "version": "1.0.0",
-  "private": true,
-  "homepage": "https://EvgenyLeukhin.github.io/react-book",
-  "description": "My learning react-repo",
+  "homepage": "https://EvgenyLeukhin.github.io/js-book",
+  "description": "My learning js-repo",
   "scripts": {
     "start": "npm run develop",
     "develop": "webpack-dev-server --config=./webpack.dev.js --open google-chrome",
     "build": "webpack --config=./webpack.prod.js",
-    "serve": "node server.js --open google-chrome",
-    "delete-build": "rimraf public",
-    "install-packages-npm": "npm install",
-    "install-packages-yarn": "yarn install",
-    "delete-packages": "rimraf node_modules",
     "deploy": "npm run build && gh-pages -d dist"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/EvgenyLeukhin/react-book.git"
+    "url": "git+https://github.com/EvgenyLeukhin/js-book.git"
   },
   "keywords": [
     "react"
   ],
-  "author": "",
+  "author": "Evgeny Leukhin",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/EvgenyLeukhin/react-book/issues"
+    "url": "https://github.com/EvgenyLeukhin/js-book/issues"
   },
   "dependencies": {
     "gh-pages": "^2.0.1",
-    "github-markdown-css": "^2.10.0",
-    "normalize.css": "^8.0.0",
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0",
-    "react-helmet": "^5.2.0",
-    "react-loadable": "^5.5.0",
-    "react-router-dom": "^4.3.1",
-    "react-transition-group": "^2.5.0"
+    "github-markdown-css": "^3.0.1",
+    "normalize.css": "^8.0.1",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.1"
   },
   "devDependencies": {
-    "autoprefixer": "^8.6.5",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.5",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "chalk": "^2.4.1",
+    "@babel/core": "^7.4.5",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-react": "^7.0.0",
+    "autoprefixer": "^9.6.0",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.6",
     "classnames": "^2.2.6",
-    "clean-webpack-plugin": "^0.1.19",
-    "compression": "^1.7.2",
-    "compression-webpack-plugin": "^1.1.11",
-    "css-loader": "^1.0.0",
-    "cssnano": "^4.0.0",
-    "eslint": "^5.0.1",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^2.1.1",
+    "cssnano": "^4.1.10",
+    "eslint": "^5.16.0",
     "eslint-loader": "^2.1.2",
-    "eslint-plugin-react": "^7.10.0",
-    "express": "^4.16.3",
-    "favicons-webpack-plugin": "0.0.9",
-    "file-loader": "^1.1.11",
+    "eslint-plugin-react": "^7.13.0",
+    "file-loader": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
-    "image-webpack-loader": "^4.3.1",
+    "image-webpack-loader": "^5.0.0",
     "markdown-with-front-matter-loader": "^0.1.0",
-    "mini-css-extract-plugin": "^0.4.1",
-    "node-sass": "^4.9.1",
-    "optimize-css-assets-webpack-plugin": "^4.0.3",
-    "postcss-loader": "^2.1.5",
-    "prop-types": "^15.6.2",
-    "rimraf": "^2.6.2",
-    "sass-loader": "^7.0.3",
-    "style-loader": "^0.21.0",
-    "uglifyjs-webpack-plugin": "^1.2.7",
-    "url-loader": "^1.0.1",
-    "webpack": "^4.15.0",
-    "webpack-bundle-analyzer": "^2.13.1",
-    "webpack-cli": "^3.0.8",
-    "webpack-dev-server": "^3.1.4",
-    "webpack-merge": "^4.1.4",
-    "webpackbar": "^2.6.1"
+    "mini-css-extract-plugin": "^0.7.0",
+    "node-sass": "^4.12.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "postcss-loader": "^3.0.0",
+    "prop-types": "^15.7.2",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.1.3",
+    "url-loader": "^2.0.0",
+    "webpack": "^4.33.0",
+    "webpack-cli": "^3.3.3",
+    "webpack-dev-server": "^3.7.1",
+    "webpack-merge": "^4.2.1",
+    "webpackbar": "^3.2.0"
   }
 }
