--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,6 @@
 {
   "presets": [
-    [ "@babel/preset-env", { "debug": true } ],
+    [ "@babel/preset-env", { "debug": false } ],
     "@babel/preset-react"
   ],
 
