--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-router-dom": "^5.0.1"
+    "react-markdown": "^4.2.2",
+    "react-router-dom": "^5.0.1",
+    "react-syntax-highlighter": "^11.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
@@ -56,6 +58,7 @@
     "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
+    "raw-loader": "^3.1.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^2.1.3",
